Miscellaneous small fixes

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                 <div class="content">
                     <div class="bg-color-primary">
                         <div class="title">our mission.</div>
-                        <div class="description">values like responsibility, mindfulness, and interconnectedness aren’t just good business practices. they’re values of a lifestyle that we believe in and strive to embody in all that we do. at be mindful, we're building a better, more sustainable future through a variety of mindful endeavors and actions.</div>
+                        <div class="description">values like responsibility, mindfulness, and interconnectedness aren’t just good business practices. they’re values of a lifestyle that we believe in and strive to embody in all that we do. at <i>be mindful</i>, we're building a better, more sustainable future through a variety of mindful endeavors and actions.</div>
                     </div>
                 </div>
                 <img src="images/our-mission.jpg">
