--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script src="https://kit.fontawesome.com/6fd3d7713b.js" crossorigin="anonymous"></script>
 
         <!-- Google Fonts CSS -->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;800&family=Montserrat:wght@600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;800&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
@@ -111,11 +111,11 @@
                 <div class="content">
                     <div class="bg-color-primary">
                         <div class="title text-color-primary">
-                            energi<span class="z-no-line">z</span>ed by green tea.
+                            energi<span class="no-alternate-styling">z</span>ed by green tea.
                             <br />
                             powered by purpose.
                         </div>
-                        <div class="description text-color-primary">non-gmo ingredients combined with striking natural flavors make for a quality product we can stand behind 100%.</div>
+                        <div class="description text-color-primary">non-gmo ingredients combined with striking natural <span class="no-alternate-styling">fl</span>avors make for a quality product we can stand behind 100%.</div>
                         <a href="about.html" class="button">learn more</a>
                     </div>
                 </div>
