--- a/press.html
+++ b/press.html
@@ -72,7 +72,7 @@
         <!-- insert stuff here -->
         <div id="press" class="container">
             <div id="media-kit">
-                <div class="title text-color-primary">our mission at be mindful beverages is to build a better, more sustainable future through a variety of mindful endeavors and actions. we're starting that off with our new line of clean label, organic energy drinks.</div>
+                <div class="title text-color-primary">our mission at <i>be mindful beverages</i> is to build a better, more sustainable future through a variety of mindful endeavors and actions. we're starting that off with our new line of clean label, organic energy drinks.</div>
                 <!-- coming soon -->
                 <!-- <div class="button-container">
                     <a href="" class="button text-color-primary">download media kit</a>
