--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                         <a class="description text-color-primary underline" href="careers.html">careers</a>
                     </div>
                 </div>
-                <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="POST">
                     <div class="input">
                         <div class="caption">
                             sign up for news, offers, and more
