--- a/careers.html
+++ b/careers.html
@@ -73,7 +73,7 @@
                 <div class="content">
                     <div class="title text-color-primary">no open postions at this time.</div>
                     <div class="description text-color-primary">thank you for your interest in joining our team! unfortunately, we do not currently have any available positions. if you’d like to be notified when new positions become available, subscribe to our mailing list below.</div>
-                    <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                    <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="POST">
                         <div class="input">
                             <div class="caption input-group">
                                 <input type="email" class="form-control text-color-primary is-default" placeholder="your email">
@@ -108,7 +108,7 @@
                         <a class="description text-color-primary underline active" href="careers.html">careers</a>
                     </div>
                 </div>
-                <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="POST">
                     <div class="input">
                         <div class="caption">
                             sign up for news, offers, and more
