--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                         have an idea for a new flavor or want to sell our beverages at your store? let's chat.
                     </div>
                 </div>
-                <form action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form action="https://formspree.io/f/mqkwapqp" method="POST">
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label class="caption text-color-primary">full name <span class="asterisk">*</span></label>
@@ -137,7 +137,7 @@
                         <a class="description text-color-primary underline" href="careers.html">careers</a>
                     </div>
                 </div>
-                <form id="email-form" action="https://formspree.io/test@dotslashdigital.com" method="POST">
+                <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="POST">
                     <div class="input">
                         <div class="caption">
                             sign up for news, offers, and more
