Updated all links

--- a/careers.html
+++ b/careers.html
@@ -34,7 +34,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="center">
-                    <a href="index.html">
+                    <a href="https://bemindfulbeverages.com">
                         <div class="gradient-bg"></div>
                         <img src="images/logo.png">
                     </a>
@@ -50,10 +50,10 @@
                     </div>
                     <div class="links">
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="about.html">about</a>
+                            <a class="nav-link description text-color-primary underline" href="https://bemindfulbeverages.com/about">about</a>
                         </div>
                         <div>
-                            <a class="nav-link description text-color-primary underline" href="contact.html">contact</a>
+                            <a class="nav-link description text-color-primary underline" href="https://bemindfulbeverages.com/contact">contact</a>
                         </div>
                     </div>
                 </div>
@@ -101,10 +101,10 @@
             <div class="container text-color-primary">
                 <div class="links">
                     <div>
-                        <a class="description text-color-primary underline" href="press.html">press</a>
+                        <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/press">press</a>
                     </div>
                     <div>
-                        <a class="description text-color-primary underline active" href="careers.html">careers</a>
+                        <a class="description text-color-primary underline active" href="https://bemindfulbeverages.com/careers">careers</a>
                     </div>
                 </div>
                 <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="POST">
