Updated Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         <meta name="theme-color" content="#f8f9fa">
 
         <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-T2WGDY8WRL"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108086121-11"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'G-T2WGDY8WRL');
+            gtag('config', 'UA-108086121-11');
         </script>
+
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
