--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
         <meta name="theme-color" content="#f8f9fa">
 
         <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-T2WGDY8WRL"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108086121-11"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'G-T2WGDY8WRL');
+            gtag('config', 'UA-108086121-11');
         </script>
 
         <!-- Bootstrap CSS -->
