Added email and new pages to footer

--- a/about.html
+++ b/about.html
@@ -126,22 +126,38 @@
         <div id="footer" class="bg-color-primary">
             <div class="container text-color-primary">
                 <div class="links">
-                    <div>
-                        <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/press">press</a>
+                    <div class="row">
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/press">press</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/careers">careers</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/privacy-policy">privacy policy</a>
+                        </div>
                     </div>
-                    <div>
-                        <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/careers">careers</a>
+                    <div class="row">
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/refund-policy">refund policy</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/shipping-policy">shipping policy</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/terms-of-service">terms of service</a>
+                        </div>
                     </div>
                 </div>
-                <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="POST">
+                <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
                     <div class="input">
                         <div class="caption">
                             sign up for news, offers, and more
                         </div>
                         <div class="caption input-group">
-                            <input type="email" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
+                            <input type="email" name="EMAIL" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="submit">
+                                <button class="btn btn-outline-secondary" type="submit" name="subscribe">
                                     <i class="fas fa-arrow-right"></i>
                                 </button>
                             </div>
@@ -149,15 +165,22 @@
                     </div>
                 </form>
                 <div class="social-media">
-                    <a href="https://instagram.com/bemindfulbeverages">
-                        <i class="fab fa-instagram text-color-primary"></i>
-                    </a>
-                    <a href="https://twitter.com/bebeverages">
-                        <i class="fab fa-twitter text-color-primary"></i>
-                    </a>
-                    <a href="https://linkedin.com/company/bemindfulbeverages">
-                        <i class="fab fa-linkedin-in text-color-primary"></i>
-                    </a>
+                    <div class="row social-media-icons">
+                        <a href="https://instagram.com/bemindfulbeverages">
+                            <i class="fab fa-instagram text-color-primary"></i>
+                        </a>
+                        <a href="https://twitter.com/bebeverages">
+                            <i class="fab fa-twitter text-color-primary"></i>
+                        </a>
+                        <a href="https://linkedin.com/company/bemindfulbeverages">
+                            <i class="fab fa-linkedin-in text-color-primary"></i>
+                        </a>
+                    </div>
+                    <div class="row email">
+                        <div>
+                            <a class="description text-color-primary underline" href="mailto:info@bemindfulbeverages.com">info@bemindfulbeverages.com</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
