--- a/index.html
+++ b/index.html
@@ -158,11 +158,27 @@
         <div id="footer" class="bg-color-primary">
             <div class="container text-color-primary">
                 <div class="links">
-                    <div>
-                        <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/press">press</a>
+                    <div class="row">
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/press">press</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/careers">careers</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/privacy-policy">privacy policy</a>
+                        </div>
                     </div>
-                    <div>
-                        <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/careers">careers</a>
+                    <div class="row">
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/refund-policy">refund policy</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/shipping-policy">shipping policy</a>
+                        </div>
+                        <div>
+                            <a class="description text-color-primary underline" href="https://bemindfulbeverages.com/terms-of-service">terms of service</a>
+                        </div>
                     </div>
                 </div>
                 <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
@@ -181,15 +197,22 @@
                     </div>
                 </form>
                 <div class="social-media">
-                    <a href="https://instagram.com/bemindfulbeverages">
-                        <i class="fab fa-instagram text-color-primary"></i>
-                    </a>
-                    <a href="https://twitter.com/bebeverages">
-                        <i class="fab fa-twitter text-color-primary"></i>
-                    </a>
-                    <a href="https://linkedin.com/company/bemindfulbeverages">
-                        <i class="fab fa-linkedin-in text-color-primary"></i>
-                    </a>
+                    <div class="row social-media-icons">
+                        <a href="https://instagram.com/bemindfulbeverages">
+                            <i class="fab fa-instagram text-color-primary"></i>
+                        </a>
+                        <a href="https://twitter.com/bebeverages">
+                            <i class="fab fa-twitter text-color-primary"></i>
+                        </a>
+                        <a href="https://linkedin.com/company/bemindfulbeverages">
+                            <i class="fab fa-linkedin-in text-color-primary"></i>
+                        </a>
+                    </div>
+                    <div class="row email">
+                        <div>
+                            <a class="description text-color-primary underline" href="mailto:info@bemindfulbeverages.com">info@bemindfulbeverages.com</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
