Updated social media links on all pages

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -333,13 +333,16 @@
                 </form>
                 <div class="social-media">
                     <div class="row social-media-icons">
-                        <a href="https://instagram.com/bemindfulbeverages">
+                        <a href="https://facebook.com/bemindfulbeverages" target="_blank">
+                            <i class="fa fa-facebook text-color-primary"></i>
+                        </a>
+                        <a href="https://instagram.com/bemindfulbeverages" target="_blank">
                             <i class="fab fa-instagram text-color-primary"></i>
                         </a>
-                        <a href="https://twitter.com/bebeverages">
+                        <a href="https://twitter.com/bemindfulenergy" target="_blank">
                             <i class="fab fa-twitter text-color-primary"></i>
                         </a>
-                        <a href="https://linkedin.com/company/bemindfulbeverages">
+                        <a href="https://linkedin.com/company/bemindfulbeverages" target="_blank">
                             <i class="fab fa-linkedin-in text-color-primary"></i>
                         </a>
                     </div>
