Refactored all pages to remove Bootstrap dependencies

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -24,33 +24,31 @@
             gtag('config', 'UA-108086121-11');
         </script>
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
         <!-- FontAwesome CSS -->
-        <script src="https://kit.fontawesome.com/6fd3d7713b.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/font-awesome.min.css">
 
         <!-- Google Fonts CSS -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;800&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/common-v2.css">
         <link rel="stylesheet" href="css/legal-pages.css">
     </head>
     <body>
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav id="navbar-v2">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar .navbar-collapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="center">
+                <div class="toggler-icon-container">
+                    <div class="toggler-icon"></div>
+                </div>
+                <div class="logo">
                     <a href="https://bemindfulbeverages.com">
                         <div class="gradient-bg"></div>
                         <img src="images/logo.png">
                     </a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <div class="links">
+                <div class="links">
+                    <div class="links-col">
                         <div>
                             <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/beverages">beverages</a>
                         </div>
@@ -58,7 +56,7 @@
                             <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/merch">merch</a>
                         </div>
                     </div>
-                    <div class="links">
+                    <div class="links-col">
                         <div>
                             <a class="nav-link description text-color-primary underline" href="https://bemindfulbeverages.com/about">about</a>
                         </div>
@@ -103,14 +101,12 @@
         <div class="section-banner bg-color-primary">
             <div class="text-color-primary title">@bemindfulbeverages <br />#wecanallbebetter</div>
         </div>
-        <div id="photo-highlights" class="container-fluid">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-            </div>
+        <div id="photo-highlights-v2">
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
         </div>
-        <div id="footer" class="bg-color-primary">
+        <div id="footer-v2" class="bg-color-primary">
             <div class="container text-color-primary">
                 <div class="links">
                     <div class="row">
@@ -137,18 +133,14 @@
                     </div>
                 </div>
                 <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
-                    <div class="input">
-                        <div class="caption">
-                            sign up for news, offers, and more
-                        </div>
-                        <div class="caption input-group">
-                            <input type="email" name="EMAIL" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="submit" name="subscribe">
-                                    <i class="fas fa-arrow-right"></i>
-                                </button>
-                            </div>
-                        </div>
+                    <div class="info-message caption">
+                        sign up for news, offers, and more
+                    </div>
+                    <div class="input-wrapper">
+                        <input type="email" name="EMAIL" class="caption bg-color-primary text-color-primary is-default" placeholder="your email">
+                        <button type="submit" name="subscribe">
+                            <i class="fa fa-arrow-right"></i>
+                        </button>
                     </div>
                 </form>
                 <div class="social-media">
@@ -157,13 +149,13 @@
                             <i class="fa fa-facebook text-color-primary"></i>
                         </a>
                         <a href="https://instagram.com/bemindfulbeverages" target="_blank">
-                            <i class="fab fa-instagram text-color-primary"></i>
+                            <i class="fa fa-instagram text-color-primary"></i>
                         </a>
                         <a href="https://twitter.com/bemindfulenergy" target="_blank">
-                            <i class="fab fa-twitter text-color-primary"></i>
+                            <i class="fa fa-twitter text-color-primary"></i>
                         </a>
                         <a href="https://linkedin.com/company/bemindfulbeverages" target="_blank">
-                            <i class="fab fa-linkedin-in text-color-primary"></i>
+                            <i class="fa fa-linkedin text-color-primary"></i>
                         </a>
                     </div>
                     <div class="row email">
@@ -177,8 +169,6 @@
 
         <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="index.js"></script>
     </body>
 </html>
