--- a/contact.html
+++ b/contact.html
@@ -24,33 +24,31 @@
             gtag('config', 'UA-108086121-11');
         </script>
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
         <!-- FontAwesome CSS -->
-        <script src="https://kit.fontawesome.com/6fd3d7713b.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/font-awesome.min.css">
 
         <!-- Google Fonts CSS -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;800&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/common-v2.css">
         <link rel="stylesheet" href="css/contact.css">
     </head>
     <body>
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav id="navbar-v2">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar .navbar-collapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="center">
+                <div class="toggler-icon-container">
+                    <div class="toggler-icon"></div>
+                </div>
+                <div class="logo">
                     <a href="https://bemindfulbeverages.com">
                         <div class="gradient-bg"></div>
                         <img src="images/logo.png">
                     </a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <div class="links">
+                <div class="links">
+                    <div class="links-col">
                         <div>
                             <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/beverages">beverages</a>
                         </div>
@@ -58,7 +56,7 @@
                             <a class="nav-link description text-color-primary underline" href="https://shop.bemindfulbeverages.com/merch">merch</a>
                         </div>
                     </div>
-                    <div class="links">
+                    <div class="links-col">
                         <div>
                             <a class="nav-link description text-color-primary underline" href="https://bemindfulbeverages.com/about">about</a>
                         </div>
@@ -87,23 +85,23 @@
                 </div>
                 <form action="https://formspree.io/f/mqkwapqp" method="POST">
                     <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class="col">
                             <label class="caption text-color-primary">full name <span class="asterisk">*</span></label>
-                            <input id="contact-full-name" type="text" class="form-control caption bg-color-primary is-default" name="Full Name" placeholder="">
+                            <input id="contact-full-name" type="text" class="caption bg-color-primary is-default" name="Full Name" placeholder="">
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <div class="col">
                             <label class="caption text-color-primary">phone number</label>
-                            <input id="contact-phone-number" type="tel" class="form-control caption bg-color-primary is-default" name="Phone Number" placeholder="">
+                            <input id="contact-phone-number" type="tel" class="caption bg-color-primary is-default" name="Phone Number" placeholder="">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class="col">
                             <label class="caption text-color-primary">email address <span class="asterisk">*</span></label>
-                            <input id="contact-email-address" type="email" class="form-control caption bg-color-primary is-default" name="_replyto" placeholder="">
+                            <input id="contact-email-address" type="email" class="caption bg-color-primary is-default" name="_replyto" placeholder="">
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <div class="col">
                             <label class="caption text-color-primary">subject</label>
-                            <select id="contact-subject" type="text" class="custom-select form-control caption bg-color-primary text-color-primary is-default dropdown-input" name="Subject" placeholder="">
+                            <select id="contact-subject" type="text" class="caption bg-color-primary text-color-primary is-default dropdown-input" name="Subject" placeholder="">
                                 <option selected value="default">choose one...</option>
                                 <option value="Product Feedback">product feedback</option>
                                 <option value="Wholesale Inquiry">wholesale inquiry</option>
@@ -114,13 +112,13 @@
                             </select>
                         </div>
                     </div>
-                    <div class="mb-3">
+                    <div class="single-col-row">
                         <label class="caption text-color-primary">how'd you hear about us?</label>
-                        <input id="contact-referral" type="text" class="form-control caption bg-color-primary is-default" name="How'd You Hear About Us?" placeholder="">
+                        <input id="contact-referral" type="text" class="caption bg-color-primary is-default" name="How'd You Hear About Us?" placeholder="">
                     </div>
-                    <div class="mb-3">
+                    <div>
                         <label class="caption text-color-primary">message <span class="asterisk">*</span></label>
-                        <textarea id="contact-message" class="form-control caption bg-color-primary is-default" rows="5" name="Message"></textarea>
+                        <textarea id="contact-message" class="caption bg-color-primary is-default" rows="5" name="Message"></textarea>
                     </div>
                     <input type="submit" class="button" value="send">
                 </form>
@@ -129,14 +127,12 @@
         <div class="section-banner bg-color-primary">
             <div class="text-color-primary title">@bemindfulbeverages <br />#wecanallbebetter</div>
         </div>
-        <div id="photo-highlights" class="container-fluid">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-            </div>
+        <div id="photo-highlights-v2">
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
         </div>
-        <div id="footer" class="bg-color-primary">
+        <div id="footer-v2" class="bg-color-primary">
             <div class="container text-color-primary">
                 <div class="links">
                     <div class="row">
@@ -163,18 +159,14 @@
                     </div>
                 </div>
                 <form id="email-form" action="https://bemindfulbeverages.us18.list-manage.com/subscribe/post?u=28b8b6b92fe7fa9eb86acbe8c&amp;id=9e9b7870a6" method="post" name="mc-embedded-subscribe-form" target="_blank">
-                    <div class="input">
-                        <div class="caption">
-                            sign up for news, offers, and more
-                        </div>
-                        <div class="caption input-group">
-                            <input type="email" name="EMAIL" class="form-control bg-color-primary text-color-primary is-default" placeholder="your email">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="submit" name="subscribe">
-                                    <i class="fas fa-arrow-right"></i>
-                                </button>
-                            </div>
-                        </div>
+                    <div class="info-message caption">
+                        sign up for news, offers, and more
+                    </div>
+                    <div class="input-wrapper">
+                        <input type="email" name="EMAIL" class="caption bg-color-primary text-color-primary is-default" placeholder="your email">
+                        <button type="submit" name="subscribe">
+                            <i class="fa fa-arrow-right"></i>
+                        </button>
                     </div>
                 </form>
                 <div class="social-media">
@@ -183,13 +175,13 @@
                             <i class="fa fa-facebook text-color-primary"></i>
                         </a>
                         <a href="https://instagram.com/bemindfulbeverages" target="_blank">
-                            <i class="fab fa-instagram text-color-primary"></i>
+                            <i class="fa fa-instagram text-color-primary"></i>
                         </a>
                         <a href="https://twitter.com/bemindfulenergy" target="_blank">
-                            <i class="fab fa-twitter text-color-primary"></i>
+                            <i class="fa fa-twitter text-color-primary"></i>
                         </a>
                         <a href="https://linkedin.com/company/bemindfulbeverages" target="_blank">
-                            <i class="fab fa-linkedin-in text-color-primary"></i>
+                            <i class="fa fa-linkedin text-color-primary"></i>
                         </a>
                     </div>
                     <div class="row email">
@@ -203,8 +195,6 @@
 
         <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="index.js"></script>
     </body>
 </html>
