Removed temporary v2 elements and combined common-v2.css with common.css

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -32,7 +32,6 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/common-v2.css">
         <link rel="stylesheet" href="css/legal-pages.css">
     </head>
     <body>
@@ -101,7 +100,7 @@
         <div class="section-banner bg-color-primary">
             <div class="text-color-primary title">@bemindfulbeverages <br />#wecanallbebetter</div>
         </div>
-        <div id="photo-highlights-v2">
+        <div id="photo-highlights">
             <div class="image"></div>
             <div class="image"></div>
             <div class="image"></div>
