--- a/careers.html
+++ b/careers.html
@@ -32,7 +32,6 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/common-v2.css">
         <link rel="stylesheet" href="css/careers.css">
     </head>
     <body>
@@ -92,7 +91,7 @@
         <div class="section-banner bg-color-primary">
             <div class="text-color-primary title">@bemindfulbeverages <br />#wecanallbebetter</div>
         </div>
-        <div id="photo-highlights-v2">
+        <div id="photo-highlights">
             <div class="image"></div>
             <div class="image"></div>
             <div class="image"></div>
