--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/common-v2.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
@@ -145,7 +144,7 @@
         <div class="section-banner fourth bg-color-primary">
             <div class="text-color-primary title">share your story: <br />#bemindful</div>
         </div>
-        <div id="photo-highlights-v2">
+        <div id="photo-highlights">
             <div class="image"></div>
             <div class="image"></div>
             <div class="image"></div>
