--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -32,7 +32,6 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/common-v2.css">
         <link rel="stylesheet" href="css/legal-pages.css">
     </head>
     <body>
@@ -281,7 +280,7 @@
         <div class="section-banner bg-color-primary">
             <div class="text-color-primary title">share your story: #bemindful</div>
         </div>
-        <div id="photo-highlights-v2">
+        <div id="photo-highlights">
             <div class="image"></div>
             <div class="image"></div>
             <div class="image"></div>
