Updated navbar-v2 to navbar and footer-v2 to footer

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" href="css/contact.css">
     </head>
     <body>
-        <nav id="navbar-v2">
+        <nav id="navbar">
             <div class="container">
                 <div class="toggler-icon-container">
                     <div class="toggler-icon"></div>
@@ -131,7 +131,7 @@
             <div class="image"></div>
             <div class="image"></div>
         </div>
-        <div id="footer-v2" class="bg-color-primary">
+        <div id="footer" class="bg-color-primary">
             <div class="container text-color-primary">
                 <div class="links">
                     <div class="row">
