--- a/press.html
+++ b/press.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" href="css/press.css">
     </head>
     <body>
-        <nav id="navbar-v2">
+        <nav id="navbar">
             <div class="container">
                 <div class="toggler-icon-container">
                     <div class="toggler-icon"></div>
@@ -113,7 +113,7 @@
             <div class="image"></div>
             <div class="image"></div>
         </div>
-        <div id="footer-v2" class="bg-color-primary">
+        <div id="footer" class="bg-color-primary">
             <div class="container text-color-primary">
                 <div class="links">
                     <div class="row">
