--- a/press.html
+++ b/press.html
@@ -14,15 +14,8 @@
         <meta name="msapplication-TileColor" content="#f8f9fa">
         <meta name="theme-color" content="#f8f9fa">
 
-        <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108086121-11"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-108086121-11');
-        </script>
+        <!-- Fathom Analytics -->
+        <script src="https://cdn.usefathom.com/script.js" data-site="DOXSSFQZ" defer></script>
 
         <!-- FontAwesome CSS -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
